created new home page

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
             <div class="row">
               <div class="col-md-12">
-                <div class="blue-bg">
+                <div class="blue-bg hidden-xs">
                   <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                       <div class="title-wrap">
@@ -203,7 +203,7 @@
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                       <div class="vertical-align-wrap">
-                        <div class="light-background push-right-20-percent pull-right">
+                        <div class="light-background-desktop push-right-20-percent pull-right">
                           <div class="media">
                             <div class="media-left media-middle">
                               <img class="media-object dark-blue-border" src="images/user-photo-square-1.png" alt="">
@@ -251,15 +251,79 @@
                     </div>
                   </div>
                 </div><!-- blue-bg-wrap -->
+                <!-- blue-bg mobile -->
+                <div class="blue-bg visible-xs-block">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <div class="title-wrap">
+                        <ul class="list-inline">
+                          <li>
+                            <img src="images/icon-top-ratings-small.png" class="img-responsive" alt="">
+                          </li>
+                          <li>
+                            <h3>Top Users<br> Ratings</h3>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="light-background-mobile">
+                        <div class="media">
+                          <div class="media-left media-middle">
+                            <img class="media-object dark-blue-border" src="images/user-photo-square-1.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>
+                              <a href="#" class="user-name">Natalia</a>
+                              <br>
+                              <span class="total-count">150</span>Likes
+                              <br>
+                              <span class="total-count">50</span>Posts
+                            </p>
+                          </div>
+                        </div><!-- media -->
+                        <div class="media top-users">
+                          <div class="media-left media-middle">
+                            <img class="media-object dark-blue-border" src="images/user-photo-square-2.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>
+                              <a href="#" class="user-name">Alena</a>
+                              <br>
+                              <span class="total-count">150</span>Likes
+                              <br>
+                              <span class="total-count">50</span>Posts
+                            </p>
+                          </div>
+                        </div><!-- media -->
+                        <div class="media top-users">
+                          <div class="media-left media-middle">
+                            <img class="media-object dark-blue-border" src="images/user-photo-square-3.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>
+                              <a href="#" class="user-name">Daniel</a>
+                              <br>
+                              <span class="total-count">150</span>Likes
+                              <br>
+                              <span class="total-count">50</span>Posts
+                            </p>
+                          </div>
+                        </div><!-- media -->
+                      </div><!-- light-background-wrap -->
+                    </div>
+                  </div>
+                </div><!-- blue-bg -->
+                <!-- blue-bg mobile -->
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <div class="blue-bg">
+                <div class="blue-bg hidden-xs">
                   <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                       <div class="vertical-align-wrap">
-                        <div class="light-background popular-topics push-left-20-percent pull-right">
+                        <div class="light-background-desktop popular-topics push-left-20-percent pull-right">
                           <a href="#" class="media">
                             <div class="media-left media-middle">
                               <img class="media-object" src="images/icon-forum-topic.png" alt="">
@@ -293,7 +357,7 @@
                             </div>
                           </a>
                           <a href="#" class="media">
-                            <div class="media-left media-middle">
+                            <div class="media-left media-middle popular">
                               <img class="media-object" src="images/icon-forum-topic.png" alt="">
                             </div>
                             <div class="media-body">
@@ -317,11 +381,73 @@
                     </div>
                   </div>
                 </div><!-- blue-bg-wrap -->
+                <!-- blue-bg mobile -->
+                <div class="blue-bg visible-xs-block">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <div class="title-wrap">
+                        <ul class="list-inline">
+                          <li>
+                            <img src="images/icon-forum-topics-small.png" class="img-responsive" alt="">
+                          </li>
+                          <li>
+                            <h3>Popular forum<br> topics</h3>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="light-background-mobile popular-topics">
+                        <a href="#" class="media">
+                          <div class="media-left media-middle">
+                            <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                          </div>
+                        </a>
+                        <a href="#" class="media">
+                          <div class="media-left media-middle">
+                            <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                          </div>
+                        </a>
+                        <a href="#" class="media">
+                          <div class="media-left media-middle">
+                            <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                          </div>
+                        </a>
+                        <a href="#" class="media">
+                          <div class="media-left media-middle">
+                            <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                          </div>
+                        </a>
+                        <a href="#" class="media">
+                          <div class="media-left media-middle">
+                            <img class="media-object" src="images/icon-forum-topic.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
+                          </div>
+                        </a>
+                      </div><!-- light-background-wrap -->
+                    </div>
+                  </div>
+                </div><!-- blue-bg -->
+                <!-- blue-bg mobile -->
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
-                <div class="blue-bg">
+                <div class="blue-bg hidden-xs">
                   <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                       <div class="title-wrap">
@@ -337,7 +463,7 @@
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                       <div class="vertical-align-wrap">
-                        <div class="light-background push-right-20-percent pull-right">
+                        <div class="light-background-desktop push-right-20-percent pull-right">
                           <div class="media">
                             <div class="media-left media-middle">
                               <img class="media-object dark-blue-border" src="images/user-photo-square-1.png" alt="">
@@ -385,6 +511,71 @@
                     </div>
                   </div>
                 </div><!-- blue-bg-wrap -->
+
+                <!-- blue-bg mobile -->
+                <div class="blue-bg visible-xs-block">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <div class="title-wrap">
+                        <ul class="list-inline">
+                          <li>
+                            <img src="images/icon-latest-updates-small.png" class="img-responsive" alt="">
+                          </li>
+                          <li>
+                            <h3>Latest <br> updates</h3>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="light-background-mobile popular-topics">
+                        <div class="media">
+                          <div class="media-left media-middle">
+                            <img class="media-object dark-blue-border" src="images/user-photo-square-1.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>
+                              <a href="#" class="user-name">Natalia</a>
+                              <br>
+                              <span>3D Ptinting</span>
+                              <br>
+                              <span><i>11.25 AM</i></span>
+                            </p>
+                          </div>
+                        </div><!-- media -->
+                        <div class="media top-users">
+                          <div class="media-left media-middle">
+                            <img class="media-object dark-blue-border" src="images/user-photo-square-2.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>
+                              <a href="#" class="user-name">Alena</a>
+                              <br>
+                              <span>3D Ptinting</span>
+                              <br>
+                              <span><i>10.00 AM</i></span>
+                            </p>
+                          </div>
+                        </div><!-- media -->
+                        <div class="media top-users">
+                          <div class="media-left media-middle">
+                            <img class="media-object dark-blue-border" src="images/user-photo-square-3.png" alt="">
+                          </div>
+                          <div class="media-body">
+                            <p>
+                              <a href="#" class="user-name">Daniel</a>
+                              <br>
+                              <span>3D Ptinting</span>
+                              <br>
+                              <span><i>8.00 AM</i></span>
+                            </p>
+                          </div>
+                        </div><!-- media -->
+                      </div><!-- light-background-wrap -->
+                    </div>
+                  </div>
+                </div><!-- blue-bg -->
+                <!-- blue-bg mobile -->
               </div>
             </div>
           </div>
