--- a/my-profile.html
+++ b/my-profile.html
@@ -5515,7 +5515,7 @@
     }
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPoiPlxE-NMWr9xp9_ouItwqDm27zrdp4&signed_in=true&libraries=places&callback=initMap" async defer="defer">
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCPoiPlxE-NMWr9xp9_ouItwqDm27zrdp4&signed_in=true&libraries=places&callback=initMap" async defer="defer">
     </script>
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 
