--- a/topic-single.html
+++ b/topic-single.html
@@ -577,7 +577,7 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPoiPlxE-NMWr9xp9_ouItwqDm27zrdp4&signed_in=true&libraries=places&callback=initMap" async defer="defer">
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyCPoiPlxE-NMWr9xp9_ouItwqDm27zrdp4&signed_in=true&libraries=places&callback=initMap" async defer="defer">
     </script>
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
 
